@@ -10,11 +10,6 @@
 
 #include <autoconf.h>
 
-/* Alias CONFIG_MAX_NUM_NODES > 1 to ENABLE_SMP_SUPPORT */
-#if CONFIG_MAX_NUM_NODES > 1
-#define ENABLE_SMP_SUPPORT
-#endif
-
 #ifdef CONFIG_ARM_HYPERVISOR_SUPPORT
 #ifdef CONFIG_ARM_PA_SIZE_BITS_40
 #define AARCH64_VSPACE_S2_START_L1
