@@ -28,6 +28,7 @@ Upcoming release: BINARY COMPATIBLE
 
  * Added support for the ARM Cortex A55
  * Added support for the ODroid C4
+ * Rename libsel4 config option ENABLE_SMP_SUPPORT to CONFIG_ENABLE_SMP_SUPPORT to be namespace compliant.
 
 ## Upgrade Notes
 ---
